# Elektronicky_diar

./: README.md
Elektronicky diar/: CMakeLists.txt  el_diar.cpp  el_diar.h  el_diar_main.cpp
